js/src/jit/MIR.cpp
@@ -1225,8 +1225,12 @@ MPhi::foldsTernary()
     // If testArg is a number type we can:
     // - fold testArg ? testArg : 0 to testArg
     // - fold testArg ? 0 : testArg to 0
-    if (IsNumberType(testArg->type()) && c->vp()->toNumber() == 0)
+    if (IsNumberType(testArg->type()) && c->vp()->toNumber() == 0) {
+        // When folding to the constant we need to hoist it.
+        if (trueDef == c)
+            c->block()->moveBefore(pred->lastIns(), c);
         return trueDef;
+    }
 
     // If testArg is a string type we can:
     // - fold testArg ? testArg : "" to testArg
@@ -1234,6 +1238,9 @@ MPhi::foldsTernary()
     if (testArg->type() == MIRType_String &&
         c->vp()->toString() == GetIonContext()->runtime->emptyString())
     {
+        // When folding to the constant we need to hoist it.
+        if (trueDef == c)
+            c->block()->moveBefore(pred->lastIns(), c);
         return trueDef;
     }
 
